# agentnfe-backend

./: .gitignore  DIAGNOSTICO_TECNICO_SISTEMA_MULTIAGENTE.md  ENTRYPOINTS.md  LICENSE  NAVIGATION.md  PROJECT_STRUCTURE.md  PROJETO_ORGANIZACAO.md  QUICKSTART.md  README.md  README_AGENTNFE.md  SETUP_RAPIDO_NFE.md  api_completa.py  check_db_structure.py  check_lengths.py  compare_csvs.py  debug_nota_fiscal.py  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_api.py  run_api_production.py  test_gemini_query.py  test_nfe_agent.py  test_nfe_with_data.py  test_output.txt  test_vector_search.py
.archive/: README.md
Projeto Final Artefatos/: I2A2_Agentes_Inteligentes_Projeto_Final_AI_Minds.ppt
Projeto_Final_Artefatos/: arquivo.txt
app/: main.py
app/core/: config.py  config_backup.py  database.py  security.py
app/middleware/: auth.py  error_handler.py  logging.py  rate_limiting.py
app/models/: __init__.py  agent_models.py  nfe_models.py
app/routers/: __init__.py  agents.py  data_processing.py  embeddings.py  fraud_detection.py  health.py  nfe.py
app/services/: __init__.py  agent_service.py  session_service.py
configs/: .env.backup-zero-hardcode  .env.example
docs/: 2025-10-29_problema-python-3.13-incompatibilidade.md  2025-10-29_relatorio-execucao-proximos-passos.md  2025-11-05_1900_sessao-desenvolvimento.md  2025-11-06_1200_sessao-desenvolvimento.md  ANALISE_COMPARATIVA_NFE_DATASETS.md  API_MODERNA_IMPORTADA.md  ARQUITETURA_VISUAL_NFE.md  AUDITORIA_BACKLOG_28-10-2025.md  AUDITORIA_GUARDRAILS_2025-11-06.md  Backlog do Projeto.md  CORRECOES_GUARDRAILS_2025-11-06.md  IMPLEMENTACAO_UPLOAD_NFE.md  MAPEAMENTO_REMOCAO_FRAUDE.md  Matriz de Complexidade e Prioridade - MVP Agente Fiscal IA.md  STATUS_API_NFE.md  SYSTEM_PROMPTS_AGENTS.md  TESTE_AGENTE_NFE_RELATORIO.md  relatorio-final.md
examples/: nfe_upload_examples.py  tax_specialist_examples.py
migrations/: 0008_nfe_schema.sql  0008_update_embedding_768d_gemini.sql  0009_create_nota_fiscal_tables.sql  0009_fix_ncm_length.sql
scripts/: __init__.py  check_embedding_dims.py  fix_embedding_768.py  fix_emojis.py  fix_guardrails.py  generate_nfe_embeddings.py  query_embeddings.py  remove_all_emojis_final.py  remove_emojis.py  remove_emojis_robust.py  remove_emojis_safe.py  remove_log_emojis.py  run_migration_0008.py  run_migrations_supabase.py  setup_and_run_fastapi.py  setup_and_run_interface_interativa.py  setup_database_instructions.py  setup_nfe.py
scripts/development/: __init__.py
scripts/maintenance/: __init__.py  check_all_tables.py  clean_database.py  clean_functions.py  setup_database.sql
scripts/setup/: __init__.py
src/: __init__.py  settings.py
src/agent/: google_llm_agent.py  grok_llm_agent.py  groq_llm_agent.py  nfe_tax_specialist_agent.py  orchestrator_agent.py  (+4 more)
tests/: __init__.py  test_correcoes_base_dados.py  test_gemini.py  test_gemini_direct.py  test_local.py  test_orchestrator_basic.py  test_rag_mock.py  test_small_ingest.py  test_verificacao_dados.py  test_workflow_completo.py
(+20 files in other folders)
